katalog/pomerium/ingress.yml
# Copyright (c) 2017-present SIGHUP s.r.l All rights reserved.
# Use of this source code is governed by a BSD-style
# license that can be found in the LICENSE file.

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pomerium
  annotations:
    forecastle.stakater.com/expose: "true"
    forecastle.stakater.com/appName: "Pomerium"
    forecastle.stakater.com/icon: "https://raw.githubusercontent.com/pomerium/pomerium/refs/heads/main/ui/dist/apple-touch-icon.png"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/proxy-buffer-size: "16k"
    kubernetes.io/tls-acme: "true"
spec:
  ingressClassName: internal
  rules:
    - host: $(AUTHENTICATE_SERVICE_HOST)
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: pomerium
                port:
                  name: http
  tls:
    - hosts:
        - $(AUTHENTICATE_SERVICE_HOST)
      secretName: pomerium-tls
